// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component Testing OmniAural Hooks Hook is created with the correct value 1`] = `
<div>
  <div>
    Linus
  </div>
  <div>
    State in Chicago
  </div>
  <div>
    Works in Chicago
  </div>
  <div>
    value
  </div>
  <div>
    foo
  </div>
  <div>
    true
  </div>
  <button
    onClick={[Function]}
  />
  <button
    id="nested_set"
    onClick={[Function]}
  />
  <div>
    null
  </div>
  <button
    id="hook_setter"
    onClick={[Function]}
  />
</div>
`;

exports[`Component Testing OmniAural Hooks Hook is updated when nested object is deleted 1`] = `
<div>
  <div>
    Jake
  </div>
  <div>
    undefined in Chicago
  </div>
  <div>
    Works in Chicago
  </div>
  <div>
    value
  </div>
  <div>
    foo
  </div>
  <div>
    true
  </div>
  <button
    onClick={[Function]}
  />
  <button
    id="nested_set"
    onClick={[Function]}
  />
  <div>
    null
  </div>
  <button
    id="hook_setter"
    onClick={[Function]}
  />
</div>
`;

exports[`Component Testing OmniAural Hooks Hook is updated when nested value is deleted 1`] = `
<div>
  <div>
    Jake
  </div>
  <div>
    Randolph in Chicago
  </div>
  <div>
    Works in Chicago
  </div>
  <div>
    value
  </div>
  <div>
    foo
  </div>
  <div>
    true
  </div>
  <button
    onClick={[Function]}
  />
  <button
    id="nested_set"
    onClick={[Function]}
  />
  <div>
    null
  </div>
  <button
    id="hook_setter"
    onClick={[Function]}
  />
</div>
`;

exports[`Component Testing OmniAural Hooks Hook is updated when null object is set to a value 1`] = `
<div>
  <div>
    Jake
  </div>
  <div>
    undefined in Chicago
  </div>
  <div>
    Works in undefined
  </div>
  <div>
    undefined
  </div>
  <div>
    foo
  </div>
  <div>
    true
  </div>
  <button
    onClick={[Function]}
  />
  <button
    id="nested_set"
    onClick={[Function]}
  />
  <div>
    null
  </div>
  <button
    id="hook_setter"
    onClick={[Function]}
  />
</div>
`;

exports[`Component Testing OmniAural Hooks Hook is updated when property is set to null 1`] = `
<div>
  <div>
    Jake
  </div>
  <div>
    undefined in Chicago
  </div>
  <div>
    Works in undefined
  </div>
  <div>
    value
  </div>
  <div>
    foo
  </div>
  <div>
    true
  </div>
  <button
    onClick={[Function]}
  />
  <button
    id="nested_set"
    onClick={[Function]}
  />
  <div>
    null
  </div>
  <button
    id="hook_setter"
    onClick={[Function]}
  />
</div>
`;

exports[`Component Testing OmniAural Hooks Hook is updated with the correct nested value through setting a property 1`] = `
<div>
  <div>
    Jake
  </div>
  <div>
    Clark in Chicago
  </div>
  <div>
    Works in Chicago
  </div>
  <div>
    value
  </div>
  <div>
    foo
  </div>
  <div>
    true
  </div>
  <button
    onClick={[Function]}
  />
  <button
    id="nested_set"
    onClick={[Function]}
  />
  <div>
    null
  </div>
  <button
    id="hook_setter"
    onClick={[Function]}
  />
</div>
`;

exports[`Component Testing OmniAural Hooks Hook is updated with the correct nested value through setting an object 1`] = `
<div>
  <div>
    Jake
  </div>
  <div>
    State in Chicago
  </div>
  <div>
    Works in Chicago
  </div>
  <div>
    value
  </div>
  <div>
    foo
  </div>
  <div>
    true
  </div>
  <button
    onClick={[Function]}
  />
  <button
    id="nested_set"
    onClick={[Function]}
  />
  <div>
    null
  </div>
  <button
    id="hook_setter"
    onClick={[Function]}
  />
</div>
`;

exports[`Component Testing OmniAural Hooks Hook is updated with the correct value 1`] = `
<div>
  <div>
    Linus
  </div>
  <div>
    State in Chicago
  </div>
  <div>
    Works in Chicago
  </div>
  <div>
    value
  </div>
  <div>
    foo
  </div>
  <div>
    true
  </div>
  <button
    onClick={[Function]}
  />
  <button
    id="nested_set"
    onClick={[Function]}
  />
  <div>
    null
  </div>
  <button
    id="hook_setter"
    onClick={[Function]}
  />
</div>
`;

exports[`Component Testing OmniAural Hooks Large object testing Hook is updated when a large object is updated 1`] = `
<div>
  <div>
    Jake
  </div>
  <div>
    undefined in Chicago
  </div>
  <div>
    Works in undefined
  </div>
  <div>
    value
  </div>
  <div>
    foo
  </div>
  <div>
    true
  </div>
  <button
    onClick={[Function]}
  />
  <button
    id="nested_set"
    onClick={[Function]}
  />
  <div>
    null
  </div>
  <button
    id="hook_setter"
    onClick={[Function]}
  />
</div>
`;

exports[`Component Testing OmniAural Hooks Large object testing Hook is updated when a large object is updated from within the component 1`] = `
<div>
  <div>
    Jake
  </div>
  <div>
    undefined in Chicago
  </div>
  <div>
    Works in undefined
  </div>
  <div>
    value
  </div>
  <div>
    bar
  </div>
  <div>
    true
  </div>
  <button
    onClick={[Function]}
  />
  <button
    id="nested_set"
    onClick={[Function]}
  />
  <div>
    null
  </div>
  <button
    id="hook_setter"
    onClick={[Function]}
  />
</div>
`;

exports[`Component Testing The Class Component should register and contain the account name on initialization 1`] = `
<div
  onClick={[Function]}
>
  <div>
    Mike
  </div>
  <div>
    Randolph
  </div>
  <div
    onClick={[Function]}
  />
  <div>
    Randolph
  </div>
  <div>
    Mike
  </div>
  <div
    onClick={[Function]}
  >
    Mike
  </div>
  <div
    onClick={[Function]}
  >
    Mike
  </div>
  <div
    onClick={[Function]}
  >
    Mike
  </div>
  <div
    onClick={[Function]}
  >
    Small Description
  </div>
  <div
    onClick={[Function]}
  >
    Small Description
  </div>
  <div
    onClick={[Function]}
  >
    Purchase Test
  </div>
  <div
    onClick={[Function]}
  >
    200
  </div>
  <div />
</div>
`;

exports[`Component Testing The Class Component should register and contain the address street on initialization using an alias 1`] = `
<div
  onClick={[Function]}
>
  <div>
    Mike
  </div>
  <div>
    Randolph
  </div>
  <div
    onClick={[Function]}
  />
  <div>
    Randolph
  </div>
  <div>
    Mike
  </div>
  <div
    onClick={[Function]}
  >
    Mike
  </div>
  <div
    onClick={[Function]}
  >
    Mike
  </div>
  <div
    onClick={[Function]}
  >
    Mike
  </div>
  <div
    onClick={[Function]}
  >
    Small Description
  </div>
  <div
    onClick={[Function]}
  >
    Small Description
  </div>
  <div
    onClick={[Function]}
  >
    Purchase Test
  </div>
  <div
    onClick={[Function]}
  >
    200
  </div>
  <div />
</div>
`;

exports[`Component Testing The Class Component should register and contain the phone number on initialization 1`] = `
<div>
  <div>
    1234567890
  </div>
</div>
`;

exports[`Component Testing The Functional Component should be registered through the high order function 1`] = `
<div>
  <div>
    Dev mode: false
  </div>
  <div>
    Michael
  </div>
</div>
`;
